# opentracing-cpp

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD.bazel  CMakeLists.txt  COPYING  ChangeLog  LICENSE  Makefile.am  NEWS  PROPOSED  README.md  RELEASE.md  WORKSPACE  app_tracing.cpp  app_tracing.h  autogen.sh  config.h.in  configure.ac  hot.h  main.cpp  opentracing-cpp-devel.spec  opentracing-cpp.pc.in  opentracing-cpp.spec  opentracing.pc.in  tracing_cpp11.h  version.h.in
bazel/: cross_platform.bzl  windows_dll_library.bzl
c++11/: CMakeLists.txt  version.h.in
c++11/cmake/: OpenTracingConfig.cmake
c++11/include/opentracing/: noop.h  preprocessor.h  propagation.h  span.h  span_context.h  string_view.h  stringref.h  tracer.h  util.h  value.h
c++11/src/: noop.cpp  propagation.cpp  tracer.cpp
c++11/test/: CMakeLists.txt  noop_test.cpp  string_view_test.cpp  stringref_test.cpp  tracer_test.cpp  util_test.cpp
c++98/: README.md
ci/: setup_linux_environment.sh  setup_osx_environment.sh
cmake/: OpenTracingConfig.cmake  runldconfig  weak_symbol.cpp
docs/: usage.md
example/: CMakeLists.txt  span_context.h
example/dynamic_load/: CMakeLists.txt  dynamic_load-example.cpp
example/tutorial/: CMakeLists.txt  text_map_carrier.h  tutorial-example.cpp  tutorial.cpp
include/opentracing/: c.h  dynamic_load.h  noop.h  propagation.h  scope_manager.h  span.h  string_view.h  symbols.h  thread_local_scope_manager.h  tracer.h  tracer_factory.h  util.h  value.h
include/opentracing/ext/: tags.h
mocktracer/: BUILD  CMakeLists.txt
mocktracer/include/opentracing/: mocktracer.h
mocktracer/include/opentracing/mocktracer/: in_memory_recorder.h  json.h  json_recorder.h  recorder.h  symbols.h  tracer.h  tracer_factory.h
mocktracer/src/: base64.cpp  base64.h  dynamic_load.cpp  in_memory_recorder.cpp  json.cpp  json2.cpp  json_recorder.cpp  mock_span.cpp  mock_span.h  mock_span_context.cpp  mock_span_context.h  mock_tracer.cpp  mocktracer.cpp  propagation.cpp  propagation.h  tracer.cpp  tracer_factory.cpp  utility.cpp  utility.h
mocktracer/test/: BUILD  CMakeLists.txt  json_test.cpp  propagation_test.cpp  tracer_factory_test.cpp  tracer_test.cpp
noop/: Makefile  noop.cc  noop.h
opentracing/: CMakeLists.txt  baggage.h  carriers.h  constants.h  globaltracer.cpp  globaltracer.h  noop.cc  noop.h  opentracing.pc.in  span.cc  span.h  spancontext.h  spanoptions.h  stringref.h  textpair.h  tracer.cc  tracer.h  tracerguards.h
scripts/: run_clang_format.sh
src/: c.c  c.cpp  dynamic_load.cpp  dynamic_load_unix.cpp  dynamic_load_unsupported.cpp  dynamic_load_windows.cpp  in_memory_stream.cpp  in_memory_stream.h  noop.cpp  propagation.cpp  scope_manager.cpp  thread_local_scope_manager.cpp  tracer.cpp  tracer_factory.cpp
src/ext/: tags.cpp
test/: BUILD  CMakeLists.txt  Makefile  assert.h  baggage.t.cc  baggate.t.cc  c_test.c  carriers.h  carriers.t.cc  dynamic_load_test.cpp  in_memory_stream_test.cpp  multiple_tracer_link_test.cpp  noop.t.cc  opentracing.t.cc  scope_manager_test.cpp  span.h  span.t.cc  spancontext.h  spancontext.t.cc  string_view_test.cpp  stringref.t.cc  thread_local_scope_manager_test.cpp  tracer.h  tracer.t.cc  tracer_a.cpp  tracer_test.cpp  unittest.h  unittest.t.cc  util_test.cpp  value_test.cpp
