AC_INIT([libopentracing], [2.0.0])

AC_PACKAGE_URL([https://github.com/opentracing/opentracing-cpp])
AC_PACKAGE_BUGREPORT([https://github.com/opentracing/opentracing-cpp/issues])
AC_CONFIG_HEADERS([opentracing/config.h])

AM_INIT_AUTOMAKE([subdir-objects])
AM_CONDITIONAL(COMPILER_IS_GCC, test "x$GCC" = "xyes")

AC_CONFIG_MACRO_DIR([m4])
AM_PROG_LIBTOOL
AC_PROG_INSTALL

AC_PROG_CXX
AC_PROG_MAKE_SET

AC_INCLUDES_DEFAULT
AC_HEADER_ASSERT
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_SIZE_T

AC_CONFIG_FILES([ Makefile ])
AC_OUTPUT
